cambio letra y nombre

--- a/untitled.ui
+++ b/untitled.ui
@@ -10,6 +10,11 @@
     <height>600</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>20</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
@@ -24,7 +29,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>Galo López</string>
     </property>
    </widget>
   </widget>
@@ -34,7 +39,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>22</height>
+     <height>51</height>
     </rect>
    </property>
   </widget>
